make sure victory is readable

--- a/src/game.css
+++ b/src/game.css
@@ -269,6 +269,7 @@
 .bluebox {
     border: solid 2px #bffdfb;
     box-shadow: -1px -1px 2px 2px #bffdfb22;
+    color: #bffdfb;
 }
 
 
